add -> Documentación Swagger HashtagsController
